--- a/WebAPI/WebAPI.csproj
+++ b/WebAPI/WebAPI.csproj
@@ -17,6 +17,7 @@
         <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="9.0.3"/>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
         <PackageReference Include="Serilog.AspNetCore" Version="9.0.0"/>
+        <PackageReference Include="Serilog.Sinks.Async" Version="2.1.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="7.3.1"/>
     </ItemGroup>
 
