--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
     - main
 jobs:
   publish:
-    runs-on: ubuntu-lastest
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
