--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,33 +9,41 @@ on:
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
-
+  
+# 1️⃣ Restore, Build & Test all in a matrix
 jobs:
-  # 1️⃣ Restore, Build & Test all in a matrix
   build-and-test:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
         dotnet-version: ['9.0.x', '8.0.x']
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Setup .NET ${{ matrix.dotnet-version }}
+        id: setup
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: ${{ matrix.dotnet-version }}
+
+      # 🔑 Force runner to use correct dotnet path (especially important on Linux)
+      - name: Use installed .NET SDK
+        run: |
+          echo "DOTNET_ROOT=${{ steps.setup.outputs.dotnet-root }}" >> $GITHUB_ENV
+          echo "${{ steps.setup.outputs.dotnet-root }}" >> $GITHUB_PATH
+
+      - name: Check installed SDKs
+        run: dotnet --list-sdks
 
       - name: Cache NuGet packages
         uses: actions/cache@v3
         with:
           path: ~/.nuget/packages
           key: ${{ runner.os }}-nuget-${{ hashFiles('**/*.csproj') }}
-          
-      - name: Check installed SDKs
-        run: dotnet --list-sdks
-        
+
       - name: Restore
         run: dotnet restore ./server.sln
 
