--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        dotnet-version: ['9.0.x', '8.0.x']
+        dotnet-version: '9.0.x'
 
     steps:
       - name: Checkout repository
