--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,6 +66,6 @@ jobs:
           dotnet-version: '9.0.x'
 
       - name: Publish
-        run: dotnet publish ./server.sln --configuration Release --no-build
+        run: dotnet publish ./server.sln --configuration Release
 
   
