--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -1,4 +1,4 @@
-name: CI 🚀
+name: Development Workflow 🚀
 
 on:
   push:
@@ -9,23 +9,34 @@ on:
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
-
+  
+# 1️⃣ Restore, Build & Test all in a matrix
 jobs:
-  # 1️⃣ Restore, Build & Test all in a matrix
   build-and-test:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
-        dotnet-version: ['9.0.x', '8.0.x']
+        os: [ubuntu-latest]
+        dotnet-version: ['9.0.x']
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Setup .NET ${{ matrix.dotnet-version }}
+        id: setup
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: ${{ matrix.dotnet-version }}
+
+      # 🔑 Force runner to use correct dotnet path (especially important on Linux)
+      - name: Use installed .NET SDK
+        run: |
+          echo "DOTNET_ROOT=${{ steps.setup.outputs.dotnet-root }}" >> $GITHUB_ENV
+          echo "${{ steps.setup.outputs.dotnet-root }}" >> $GITHUB_PATH
+
+      - name: Check installed SDKs
+        run: dotnet --list-sdks
 
       - name: Cache NuGet packages
         uses: actions/cache@v3
@@ -55,86 +66,6 @@ jobs:
           dotnet-version: '9.0.x'
 
       - name: Publish
-        run: dotnet publish ./server.sln --configuration Release --no-build
+        run: dotnet publish ./server.sln --configuration Release
 
-  # 3️⃣ Email notification on any failure
-  notify-on-failure:
-    if: ${{ failure() }}
-    needs: [build-and-test, publish]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Send email notification
-        uses: dawidd6/action-send-mail@v3
-        with:
-          server_address: smtp.gmail.com
-          server_port: 587
-          username: ${{ secrets.SMTP_USERNAME }}
-          password: ${{ secrets.SMTP_PASSWORD }}
-          from: ${{ secrets.SMTP_USERNAME }}
-          to: ${{ secrets.NOTIFY_EMAIL }}
-          subject: '❌ CI failed for ${{ github.repository }}'
-          content_type: text/html
-          body: |
-            <!DOCTYPE html>
-            <html lang="en">
-            <head>
-              <meta charset="UTF-8">
-              <title>CI Failure Notification</title>
-              <style>
-                /* Container */
-                .email-wrapper {
-                  width: 100%;
-                  background-color: #f4f4f4;
-                  padding: 20px 0;
-                  margin: 0;
-                }
-                .email-content {
-                  max-width: 600px;
-                  background-color: #ffffff;
-                  margin: 0 auto;
-                  padding: 20px;
-                  border-radius: 8px;
-                  font-family: Arial, sans-serif;
-                  colour: #333333;
-                  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-                }
-                /* Headings & text */
-                .email-content h1 {
-                  font-size: 20px;
-                  margin-bottom: 10px;
-                }
-                .email-content p {
-                  font-size: 14px;
-                  line-height: 1.6;
-                  margin: 10px 0;
-                }
-                /* Links */
-                .email-content a {
-                  colour: #1a73e8;
-                  text-decoration: none;
-                }
-                .email-content a:hover {
-                  text-decoration: underline;
-                }
-              </style>
-            </head>
-            <body class="email-wrapper">
-              <div class="email-content">
-                <h1>CI Pipeline Failure Notice</h1>
-                <p>Hello,</p>
-                <p>
-                  The CI workflow <strong>${{ github.workflow }}</strong>
-                  has failed on branch <strong>${{ github.ref_name }}</strong>.
-                </p>
-                <p>
-                  You can view the full details
-                  <a href="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}">
-                    here
-                  </a>.
-                </p>
-                <p>Please investigate the failure at your earliest convenience.</p>
-                <p>Many thanks,</p>
-                <p><em>Your CI Bot</em></p>
-              </div>
-            </body>
-            </html>
+  
