--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -28,6 +28,31 @@ jobs:
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: ${{ matrix.dotnet-version }}
+        
+      # Build and Push Docker Image
+      - name: Extract Docker image metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ vars.DOCKER_USERNAME }}/my-image
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          annotations: ${{ steps.meta.outputs.annotations }}
+          provenance: true
+          sbom: true
 
       # 🔑 Force runner to use correct dotnet path (especially important on Linux)
       - name: Use installed .NET SDK
@@ -56,7 +81,7 @@ jobs:
   # 2️⃣ Publish (only if tests passed on at least one matrix axis)
   publish:
     needs: build-and-test
-    if: ${{ needs.build-and-test.result == 'success' }}
+    if: ${{ needs.build-and-test.result == 'success' && github.event_name == 'push' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
