--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -93,4 +93,43 @@ jobs:
       - name: Publish
         run: dotnet publish ./server.sln --configuration Release
 
+      # 3️⃣ Deploy to Elastic Beanstalk
+  deploy:
+    needs: publish
+    if: ${{ needs.publish.result == 'success' && github.event_name == 'push' }}
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Install AWS CLI
+        run: |
+          pip install awscli --upgrade --user
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
+
+      - name: Install EB CLI
+        run: |
+          pip install awsebcli --upgrade --user
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Initialise EB CLI
+        run: |
+          eb init forgeblade --platform docker --region ${{ secrets.AWS_REGION }}
+          eb use forgeblade-prod
+
+      - name: Deploy to Elastic Beanstalk
+        run: eb deploy --staged
   
